inventory/dev-turbo/ingresses/ingress-kibana-logging.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-kibana-logging
  namespace: kube-system
spec:
  rules:
  - host: turbo.blacklab.lan
    http:
      paths:
      - backend:
          serviceName: kibana-logging
          servicePort: 5601
        path: /kibana-logging
